<resources>
    <string name="app_name">Swoosh App</string>
    <string name="swooshlogo">swooshlogo</string>
    <string name="bgi">bgi</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_n_and_dominate_the_league">Find a team in your city \n and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="leaguebg">leaguebg</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="co_ed">co-ed</string>
    <string name="next">Next</string>
    <string name="womens">Womens</string>
    <string name="background_view">background_view</string>
    <string name="i_am_a">I am a:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="button">Button</string>
    <string name="searchleague">TextView</string>
    <string name="finishbg">finishbg</string>
    <string name="finish">finish</string>
</resources>